Fix untranslatable string

Fix untranslatable string in Organize Collection Dialog

BUG: 331443
FIXED-IN: 2.9